got basic app functionality going

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>FriendFinder</title>
+  <title>Who's Your Buddy?</title>
 
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -16,6 +16,8 @@
   <!-- Chosen -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+
+  <link rel="stylesheet" href="../../assets/css/style.css">
 
 </head>
 
@@ -36,7 +38,7 @@
     <hr>
 
     <h3><strong>Question 1</strong></h3>
-    <h4>I like to play video games.</h4>
+    <h4>People are exhausting.</h4>
     <select class="chosen-select" id="q1">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -47,7 +49,7 @@
     </select>
 
     <h3><strong>Question 2</strong></h3>
-    <h4>I consider myself a night owl.</h4>
+    <h4>Books are for nerds.</h4>
     <select class="chosen-select" id="q2">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -59,7 +61,7 @@
 
 
     <h3><strong>Question 3</strong></h3>
-    <h4>Deep relationships and conversations are important to me.</h4>
+    <h4>The sharing of memes is my love language.</h4>
     <select class="chosen-select" id="q3">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -71,7 +73,7 @@
 
 
     <h3><strong>Question 4</strong></h3>
-    <h4>I prefer many friendships to a few deep ones.</h4>
+    <h4>I live in constant fear of embarrassment.</h4>
     <select class="chosen-select" id="q4">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -83,7 +85,7 @@
 
 
     <h3><strong>Question 5</strong></h3>
-    <h4>I would call myself a rule-follower.</h4>
+    <h4>I call pets "fur-babies."</h4>
     <select class="chosen-select" id="q5">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -95,7 +97,7 @@
 
 
     <h3><strong>Question 6</strong></h3>
-    <h4>I consider stubbornness to be a positive trait.</h4>
+    <h4>I prefer the Oxford comma.</h4>
     <select class="chosen-select" id="q6">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -107,7 +109,7 @@
 
 
     <h3><strong>Question 7</strong></h3>
-    <h4>Social justice matters are important to me.</h4>
+    <h4>I procrastinate from my job like it's my job.</h4>
     <select class="chosen-select" id="q7">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -118,7 +120,7 @@
     </select>
 
     <h3><strong>Question 8</strong></h3>
-    <h4>I enjoy spending time in nature.</h4>
+    <h4>I support capital punishment.</h4>
     <select class="chosen-select" id="q8">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -129,7 +131,7 @@
     </select>
 
     <h3><strong>Question 9</strong></h3>
-    <h4>I am an early adopter of technology.</h4>
+    <h4>Family is very important to me.</h4>
     <select class="chosen-select" id="q9">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -140,7 +142,7 @@
     </select>
 
     <h3><strong>Question 10</strong></h3>
-    <h4>Most people exhaust me.</h4>
+    <h4>I think personality quizzes like this are a waste of time.</h4>
     <select class="chosen-select" id="q10">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
