--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>FriendFinder</title>
+  <title>Who's Your Buddy?</title>
 
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -13,6 +13,8 @@
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
+  <link rel="stylesheet" href="./../../assets/css/style.css">
+
 </head>
 
 <body>
@@ -20,10 +22,12 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+      <div>
+      <img id="logo" src="./../../assets/img/logo.png" />
+      </div>
       <hr>
-      <h2>Answer a few basic questions. </h2>
-      <h2>Then find the friend with the greatest compatibility!</h2>
+      <h2>You're just ten questions away from your new best friend!</h2>
+      <h2>But, like, no promises.</h2>
       <br>
 
       <div>
@@ -34,7 +38,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/wedodge89/friend-finder">GitHub Repo</a></p>
       </div>
     </footer>
 
